skin.scrollToTop.less: fixed bs-top arrow overlapping content @media print
Need backport to 2.23.3

--- a/resources/components/skin.scrollToTop.less
+++ b/resources/components/skin.scrollToTop.less
@@ -37,3 +37,8 @@
 		bottom: 30px;
 	}
 }
+@media only print{
+	#bs-top {
+		display: none;
+		}
+}
